--- a/templates/question/list.html.twig
+++ b/templates/question/list.html.twig
@@ -1,10 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block content %}
+    <h1>Les questions à débattre</h1>
 
+    <table class="table table-striped">
+        <tr>
+            <th>Questions</th>
+            <th>Appuis</th>
+            <th>Actions</th>
+        </tr>
+
+        {# Affichage des questions ici #}
+        {% for question in questions %}
+            <tr>
+                <td>{{ question.title }}</td>
+                <td>{{ question.supports }}</td>
+                <td>{{ question.description }}</td>
+            </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
 
 {% block title %}
-
+    Questions à débattre
 {% endblock %}
 
