--- a/templates/question/list.html.twig
+++ b/templates/question/list.html.twig
@@ -7,6 +7,7 @@
         <tr>
             <th>Questions</th>
             <th>Appuis</th>
+            <th>Date</th>
             <th>Actions</th>
         </tr>
 
@@ -15,7 +16,8 @@
             <tr>
                 <td>{{ question.title }}</td>
                 <td>{{ question.supports }}</td>
-                <td>{{ question.description }}</td>
+                <td>{{ question.creationDate|date('d-m-Y H:i:s') }}</td>
+                <td><a class="btn btn-primary" href="#">Débattre</a></td>
             </tr>
         {% endfor %}
     </table>
