--- a/templates/question/list.html.twig
+++ b/templates/question/list.html.twig
@@ -17,7 +17,8 @@
                 <td>{{ question.title }}</td>
                 <td>{{ question.supports }}</td>
                 <td>{{ question.creationDate|date('d-m-Y H:i:s') }}</td>
-                <td><a class="btn btn-primary" href="#">Débattre</a></td>
+                <td><a class="btn btn-primary"
+                       href="{{ path('question_detail', {'id': question.id}) }}">Débattre</a></td>
             </tr>
         {% endfor %}
     </table>
