create base for create question page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,22 +4,21 @@ body
     font-family: "Open Sans", "sans-serif";
 }
 
-
-
 header
 {
     background-color: #529ec4;
 }
 
-header>div>div:hover
+header>nav>div:hover
 {
     background-color: #488daf;
 }
 
-header>div>div
+header>nav>div
 {
-    text-align: center;
-    align-self: center;
+    margin: 0;
+    padding: 0;
+    height: 70px;
 }
 
 a
@@ -32,9 +31,17 @@ a:hover
     text-decoration: none;
 }
 
+.nav-header>a
+{
+    position: relative;
+    top: 18px;
+}
+
 #title
 {
     font-size: 24px;
+    position: relative;
+    top: 10px;
 }
 
 #logo
