--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,13 +16,13 @@
                             <img alt="logo du site" src="{{ asset('img/demoliqu.jpg') }}" id="logo">
                         </a>
                     </div>
-                    <div class="nav-link" id="title">
-                        <a href="{{ path('home') }}">DemoLiqu</a>
-                    </div>
                     <div class="nav-link">
+                        <a href="{{ path('home') }}" id="title">DemoLiqu</a>
+                    </div>
+                    <div class="nav-link nav-header">
                         <a href="{{ path('home') }}">Accueil</a>
                     </div>
-                    <div class="nav-link">
+                    <div class="nav-link nav-header">
                         <a href="{{ path('question_list') }}">Liste</a>
                     </div>
                 </nav>
