--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -2,6 +2,20 @@
 
 {% block content %}
     <h1>Bienvenue sur Demoliquidem !</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque beatae consequatur deleniti doloremque eos exercitationem fuga hic, illum iusto minima nostrum quas, quos reprehenderit rerum saepe sed soluta voluptates?</p>
 {% endblock %}
 
 {% block title %}DemoLiquide | Le peuple au pouvoir{% endblock %}
