--- a/templates/question/create.html.twig
+++ b/templates/question/create.html.twig
@@ -1,6 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
+    <h1>Ajoutez votre question</h1>
+
+    {{ form_start(questionForm, {
+        'attr': {
+            'novalidate': 'novalidate'
+        }})
+    }}
+
+    {{ form_widget(questionForm) }}
+
+    <button class="btn btn-success">Envoyer !</button>
+    {{ form_end(questionForm) }}
 
 {% endblock %}
 
