--- a/public/css/app.css
+++ b/public/css/app.css
@@ -54,6 +54,16 @@ a:hover
     top: 18px;
 }
 
+.message
+{
+    margin: 10px 0px;
+}
+
+.message>p
+{
+    margin: 2px 0px;
+}
+
 #title
 {
     font-size: 24px;
