--- a/templates/question/details.html.twig
+++ b/templates/question/details.html.twig
@@ -6,7 +6,7 @@
     <div>{{ question.supports }} appuis</div>
 
     <div>
-        <a href="#" class="btn btn-success">Appuyer cette proposition</a>
+        <a href="#" class="btn btn-success float-right">Appuyer cette proposition</a>
     </div>
 
     <div>{{ question.creationDate|date('d-m-Y H:i:s') }}</div>
@@ -16,7 +16,20 @@
 
     <h2>Le débat</h2>
 
-    {# @todo: Afficher les messages reliés à cette question #}
+    {{ form_start(messageForm, {'attr': {'novalidate': 'novalidate'}})}}
+
+    {{ form_widget(messageForm) }}
+
+    <button class="btn btn-success">Envoyer !</button>
+    {{ form_end(messageForm) }}
+
+    {% for message in messages %}
+        <div class="message">
+            <p>envoyé par machin le {{ message.creationDate|date("d-m-Y à H:i:s") }} </p>
+            <p>{{ message.content }}</p>
+        </div>
+    {% endfor %}
+
 {% endblock %}
 
 {% block title %}{{ question.title }}{% endblock %}
