add security content

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,9 @@
                     </div>
                 {% else %}
                     <div class="nav-link nav-header">
+                        <a href="{{ path('app_account') }}">Compte</a>
+                    </div>
+                    <div class="nav-link nav-header">
                         <a href="{{ path('question_create') }}">Proposer</a>
                     </div>
                     <div class="nav-link nav-header">
